Adjusting label font size to fix wrap bug on thin screens

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,8 +1,9 @@
 // Space/sizes
+$xxs-size: 0.3rem;
 $xs-size: 0.7rem;
 $s-size: 1rem;
 $m-size: 1.6rem;
-$ml-size: 2.6rem;
+$ml-size: 2.3rem;
 $l-size: 3rem;
 $xl-size: 3.4rem;
 $xxl-size: 4rem;
